@@ -1,3 +1,8 @@
+2006-04-10  Edward Hervey  <edward@fluendo.com>
+
+	* gnl/gnlobject.c: (gnl_object_change_state):
+	'really' wrong state_change handling
+
 2006-04-07  Edward Hervey  <edward@fluendo.com>
 
 	* COPYING:
